--- a/style.css
+++ b/style.css
@@ -356,10 +356,14 @@ a {
 }
 .section-wrapper .skill-percentage:nth-child(7)::before {
   width: 50%;
-  -webkit-animation: skill_6 0.6s ease;
-          animation: skill_6 0.6s ease;
+  -webkit-animation: skill_7 0.6s ease;
+          animation: skill_7 0.6s ease;
 }
-
+.section-wrapper .skill-percentage:nth-child(8)::before {
+  width: 50%;
+  -webkit-animation: skill_8 0.6s ease;
+          animation: skill_8 0.6s ease;
+}
 @-webkit-keyframes skill_1 {
   from {
     width: 0%;
@@ -462,7 +466,7 @@ a {
     width: 0%;
   }
   to {
-    width: 60%;
+    width: 50%;
   }
 }
 @keyframes skill_7 {
@@ -470,7 +474,7 @@ a {
     width: 0%;
   }
   to {
-    width: 60%;
+    width: 50%;
   }
 }
 .picture-resume img {
